// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept all text props 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 1.5rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
  color: #0069D0;
  font-size: 4rem;
  font-weight: bolder;
  font-style: italic;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <h1
    class="emotion-0"
  >
    Heading with all text props
  </h1>
</div>
`;

exports[`should accept style prop 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 1.5rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
  color: red;
}

<div>
  <h1
    class="emotion-0"
  >
    Heading Primary color
  </h1>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 1.5rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
}

<div>
  <h1
    class="emotion-0"
  >
    Heading 1
  </h1>
</div>
`;

exports[`should render correctly 2`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 1.25rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
}

<div>
  <h2
    class="emotion-0"
  >
    Heading 2
  </h2>
</div>
`;

exports[`should render correctly 3`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
}

<div>
  <h3
    class="emotion-0"
  >
    Heading 3
  </h3>
</div>
`;

exports[`should render correctly 4`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
}

<div>
  <h4
    class="emotion-0"
  >
    Heading 4
  </h4>
</div>
`;

exports[`should render correctly 5`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
}

<div>
  <h5
    class="emotion-0"
  >
    Heading 5
  </h5>
</div>
`;

exports[`should render correctly 6`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.75rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
}

<div>
  <h6
    class="emotion-0"
  >
    Heading 6
  </h6>
</div>
`;
